# Dedicated to the public domain under CC0: https://creativecommons.org/publicdomain/zero/1.0/.

[metadata]
name = coven
version = 0.0.0
license = CC0
author = George King
author_email = george.w.king@gmail.com
url = https://github.com/gwk/coven
description = Coven is a code coverage tool for python bytecode.
packages =
  coven
keywords =
  code coverage
  python
  bytecode
  settrace
classifiers =
  Development Status :: 3 - Alpha
  Environment :: Console
  Intended Audience :: Developers
  Intended Audience :: Science/Research
  License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
  Programming Language :: Python :: 3 :: Only
  Topic :: Documentation
  Topic :: Education
  Topic :: Software Development
  Topic :: Software Development :: Build Tools
  Topic :: Software Development :: Documentation


# put build products in _build wherever possible.

[build]
build-base=_build

[egg_info]
#egg-base=_build # specifying a custom egg-base appears to break the egg-link in develop mode.

[sdist]
dist-dir=_build

[mypy]
python_version = 3.10
cache_dir = _build/mypy_cache
sqlite_cache = True

check_untyped_defs = True
disallow_any_unimported = False
disallow_incomplete_defs = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_decorators = False
disallow_untyped_defs = False
show_column_numbers = True
show_none_errors = True
strict_equality = False
strict_optional = True
warn_incomplete_stub = True
warn_no_return = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
warn_unused_configs = True
warn_unused_ignores = True
